--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
       <button
         type="button"
         class="btn btn-primary btn-block mb-4"
-        onclick="window.location.href='index.html'"
+        onclick="window.location.href='loggedin.html'"
       >
         Log in
       </button>
