--- a/loggedin.html
+++ b/loggedin.html
@@ -92,11 +92,22 @@
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
-                <!-- Login/Signup bên phải -->
+                <!-- Avatar menu bên phải -->
                 <div class="navbar-nav ms-auto">
-                    <a href="login.html" class="nav-item nav-link">Login</a>
-                    <a href="signup.html" class="nav-item nav-link">Signup</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                            <img src="img/human.png" alt="User"
+                                style="width:35px; height:35px; border-radius:50%; object-fit:cover;">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end m-0">
+                            <a href="profile.html" class="dropdown-item">Thông tin</a>
+                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                            <div class="dropdown-divider"></div>
+                            <a href="logout.html" class="dropdown-item">Đăng xuất</a>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </nav>
@@ -260,7 +271,7 @@
     </div>
     <!-- About End -->
 
-    
+
     <!-- Facts Start -->
     <!-- <div class="container-fluid bg-img py-5 mb-5">
         <div class="container py-5">
@@ -317,7 +328,7 @@
         </div>
     </div> -->
     <!-- Facts End -->
-    
+
 
 
     <!-- Products Start -->
@@ -325,7 +336,7 @@
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
                 <h2 class="text-primary font-secondary">Menu & Pricing</h2>
-                <h1 class="display-4 text-uppercase"  style="color: white;">Explore Our Cakes</h1>
+                <h1 class="display-4 text-uppercase" style="color: white;">Explore Our Cakes</h1>
             </div>
             <div class="tab-class text-center">
                 <ul
@@ -639,7 +650,8 @@
                         <h4 class="text-uppercase mb-3">Birthday Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="birthday-cake.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Read More <i
+                                class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
