--- a/birthday-cake-1.html
+++ b/birthday-cake-1.html
@@ -137,47 +137,37 @@
 
       <!-- Cake 1 -->
       <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.1</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
-              celebrations.</p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <!-- Nút Read More -->
-            <button class="btn btn-primary mt-2" onclick="window.location.href='cake-info-1.html'">
-              <i class="#"></i>Read More
-            </button>
+  <div class="card h-100 text-center">
+    <img src="img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1">
+    <div class="card-body d-flex flex-column">
+      <h6 class="fw-bold"><a href="#">Birthday Cake No.1</a></h6>
+      <p class="mb-3 flex-grow-1">
+        Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+      </p>
+      <h5 class="fw-semibold">$45.99</h5>
+      <button class="btn btn-primary mt-2">Read More</button>
+      <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+    </div>
+  </div>
+</div>
 
-            <!-- Nút Add to cart -->
-            <button class="btn btn-primary mt-2">
-              <i class="fas fa-shopping-cart me-2"></i>Add to cart
-            </button>
-          </div>
-        </div>
-      </div>
 
       <!-- Cake 2 -->
       <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.2</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
-              celebrations.</p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <!-- Nút Read More -->
-            <button class="btn btn-primary mt-2">
-              <i class="#"></i>Read More
-            </button>
+  <div class="card h-100 text-center">
+    <img src="img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 1">
+    <div class="card-body d-flex flex-column">
+      <h6 class="fw-bold"><a href="#">Birthday Cake No.1</a></h6>
+      <p class="mb-3 flex-grow-1">
+        Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+      </p>
+      <h5 class="fw-semibold">$45.99</h5>
+      <button class="btn btn-primary mt-2">Read More</button>
+      <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+    </div>
+  </div>
+</div>
 
-            <!-- Nút Add to cart -->
-            <button class="btn btn-primary mt-2">
-              <i class="fas fa-shopping-cart me-2"></i>Add to cart
-            </button>
-          </div>
-        </div>
-      </div>
 
       <!-- Cake 3 -->
       <div class="col-md-3 col-sm-6">
