--- a/loggedin.html
+++ b/loggedin.html
@@ -68,50 +68,59 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
-        <div class="container-fluid">
-            <!-- Nút toggle cho mobile -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+  <div class="container-fluid">
+    <!-- Nút toggle cho mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <!-- Các menu đang có -->
-                <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item">Our Service</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-                </div>
-
-                <!-- Avatar menu bên phải -->
-                <div class="navbar-nav ms-auto">
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                            <img src="img/human.png" alt="User"
-                                style="width:35px; height:35px; border-radius:50%; object-fit:cover;">
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end m-0">
-                            <a href="profile.html" class="dropdown-item">Thông tin</a>
-                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
-                            <div class="dropdown-divider"></div>
-                            <a href="logout.html" class="dropdown-item">Đăng xuất</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <!-- Các menu đang có -->
+      <div class="navbar-nav ms-auto mx-lg-auto py-0">
+        <a href="index.html" class="nav-item nav-link active">Home</a>
+        <a href="about.html" class="nav-item nav-link">About Us</a>
+        <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+        <a href="team.html" class="nav-item nav-link">Master Chefs</a>
+        <div class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+          <div class="dropdown-menu m-0">
+            <a href="service.html" class="dropdown-item">Our Service</a>
+            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+          </div>
         </div>
-    </nav>
-    <!-- Navbar End -->
+        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+      </div>
+
+      <!-- Shopping cart + Avatar menu bên phải -->
+      <div class="navbar-nav ms-3">
+        <!-- Shopping cart -->
+        <a href="cart.html" class="nav-link me-3">
+          <img src="img/shopping-cart-white.png" alt="Cart"
+            style="width:40px; height:40px; object-fit:cover;">
+        </a>
+
+        <!-- Avatar -->
+        <div class="nav-item dropdown">
+          <a href="#" class="nav-link" data-bs-toggle="dropdown">
+            <img src="img/human_white.png" alt="User"
+              style="width:40px; height:40px; border-radius:0%; object-fit:cover;">
+          </a>
+          <div class="dropdown-menu dropdown-menu-end m-0">
+            <a href="profile.html" class="dropdown-item">Thông tin</a>
+            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+            <div class="dropdown-divider"></div>
+            <a href="logout.html" class="dropdown-item">Đăng xuất</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</nav>
+<!-- Navbar End -->
+
+
 
 
     <!-- Hero Start -->
