--- a/birthday-cake-2.html
+++ b/birthday-cake-2.html
@@ -140,12 +140,12 @@
     </div>
     <!-- Grid bánh -->
     <div class="row g-4 mt-5">
-      <!-- Cake 1 -->
+      <!-- Cake 5 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1">
+          <img src="img/bdcake-5.jpg" class="card-img-top" alt="Birthday Cake 5">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.1</a></h6>
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.5</a></h6>
             <p class="mb-3 flex-grow-1">
               Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
             </p>
@@ -156,12 +156,12 @@
         </div>
       </div>
 
-      <!-- Cake 2 -->
+      <!-- Cake 6 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2">
+          <img src="img/bdcake-6.jpg" class="card-img-top" alt="Birthday Cake 6">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.2</a></h6>
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.6</a></h6>
             <p class="mb-3 flex-grow-1">
               Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
             </p>
@@ -172,12 +172,12 @@
         </div>
       </div>
 
-      <!-- Cake 3 -->
+      <!-- Cake 7 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3">
+          <img src="img/bdcake-7.jpg" class="card-img-top" alt="Birthday Cake 7">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.3</a></h6>
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.7</a></h6>
             <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
               celebrations.</p>
             <h5 class="fw-semibold">$45.99</h5>
@@ -187,12 +187,12 @@
         </div>
       </div>
 
-      <!-- Cake 4 -->
+      <!-- Cake 8 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4">
+          <img src="img/bdcake-8.jpg" class="card-img-top" alt="Birthday Cake 8">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.4</a></h6>
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.8</a></h6>
             <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
               celebrations.</p>
             <h5 class="fw-semibold">$45.99</h5>
@@ -209,13 +209,13 @@
     <nav aria-label="Cake list pages">
       <ul class="pagination">
         <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1">Previous</a>
+          <a class="page-link" href="birthday-cake-1.html">Previous</a>
         </li>
-        <li class="page-item active"><a class="page-link" href="birthday-cake-1.html">1</a></li>
-        <li class="page-item"><a class="page-link" href="birthday-cake-2.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="birthday-cake-1.html">1</a></li>
+        <li class="page-item active"><a class="page-link" href="birthday-cake-2.html">2</a></li>
         <li class="page-item"><a class="page-link" href="birthday-cake-3.html">3</a></li>
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-2.html">Next</a>
+          <a class="page-link" href="birthday-cake-3.html">Next</a>
         </li>
       </ul>
     </nav>
