--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,22 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    
+    <!-- CSS cho nút Close custom -->
+    <style>
+      .btn-close-custom {
+        background-color: #e88f2a;
+        border: none;
+        padding: 8px 16px;
+        color: #fff;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      .btn-close-custom:hover {
+        background-color: #cf7d20;
+      }
+    </style>
 </head>
 
 <body>
@@ -134,7 +150,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <form>
+                    <form id="contactForm">
                         <div class="row g-3">
                             <div class="col-sm-6">
                                 <input type="text" class="form-control bg-light border-0 px-4" placeholder="Your Name" style="height: 55px;">
@@ -159,6 +175,18 @@
     </div>
     <!-- Contact End -->
 
+
+    <!-- Modal thông báo -->
+    <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content text-center p-4">
+                <h5 class="modal-title mb-3" id="successModalLabel">Message Sent</h5>
+                <p>Thank you for your response!</p>
+                <button type="button" class="btn-close-custom mt-3" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark bg-img text-secondary" style="margin-top: 235px">
@@ -223,9 +251,7 @@
     <div class="container-fluid text-secondary py-4" style="background: #111111;">
         <div class="container text-center">
             <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved. 
-			
-			<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-			Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+            Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
     <!-- Footer End -->
@@ -245,6 +271,14 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-</body>
 
+    <!-- JS để mở modal khi gửi form -->
+    <script>
+      document.getElementById("contactForm").addEventListener("submit", function(e) {
+        e.preventDefault(); // chặn reload trang
+        var myModal = new bootstrap.Modal(document.getElementById('successModal'));
+        myModal.show();
+      });
+    </script>
+</body>
 </html>
