--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                                         class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
                                 <a class="text-secondary mb-2" href="#"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-secondary" href="#"><i
+                                <a class="text-secondary" href="contact.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
                         </div>
