--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="pages/contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
                 <!-- Login/Signup bên phải -->
                 <div class="navbar-nav ms-auto">
-                    <a href="login.html" class="nav-item nav-link">Login</a>
-                    <a href="signup.html" class="nav-item nav-link">Signup</a>
+                    <a href="pages/login.html" class="nav-item nav-link">Login</a>
+                    <a href="pages/signup.html" class="nav-item nav-link">Signup</a>
                 </div>
             </div>
         </div>
@@ -639,7 +639,7 @@
                         <h4 class="text-uppercase mb-3">Birthday Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase text-dark" href="pages/birthday-cake-1.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -891,7 +891,7 @@
                                         class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
                                 <a class="text-secondary mb-2" href="#"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-secondary" href="contact.html"><i
+                                <a class="text-secondary" href="pages/contact.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
                         </div>
