--- a/pages/birthday-cake-1.html
+++ b/pages/birthday-cake-1.html
@@ -26,15 +26,15 @@
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />
 
   <style>
     /* Container bọc ngoài có ảnh nền */
     .card-wrapper {
-      background: url("img/bg.jpg") no-repeat center center;
+      background: url("../img/bg.jpg") no-repeat center center;
       background-size: cover;
       padding: 40px;
     }
@@ -72,7 +72,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="index.html" class="navbar-brand">
+          <a href="../index.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -101,7 +101,7 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="index.html" class="nav-item nav-link active">Home</a>
+          <a href="../index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
           <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
           <a href="team.html" class="nav-item nav-link">Master Chefs</a>
@@ -123,13 +123,21 @@
   </nav>
   <!-- Navbar End -->
 
-  
+
   <!-- Birthday Cakes Section -->
   <div class="container my-5 position-relative">
+    <div class="position-relative">
+      <!-- Nút Back -->
+      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+        style="top: -40px; left: -360px; z-index: 1000;">
+        ← Back
+      </a>
+    </div>
+
     <!-- Menu 3 gạch -->
     <div class="dropdown position-absolute" style="top: -20px; right: -60px;">
-      <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown"
-        data-bs-toggle="dropdown" aria-expanded="false">
+      <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown" data-bs-toggle="dropdown"
+        aria-expanded="false">
         <i class="fas fa-bars"></i>
       </button>
       <ul class="dropdown-menu" aria-labelledby="menuDropdown">
@@ -143,14 +151,16 @@
       <!-- Cake 1 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1">
+          <img src="../img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1">
           <div class="card-body d-flex flex-column">
             <h6 class="fw-bold"><a href="#">Birthday Cake No.1</a></h6>
             <p class="mb-3 flex-grow-1">
               Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
             </p>
             <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
+            <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+              Read More
+            </button>
             <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
           </div>
         </div>
@@ -159,7 +169,7 @@
       <!-- Cake 2 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2">
+          <img src="../img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2">
           <div class="card-body d-flex flex-column">
             <h6 class="fw-bold"><a href="#">Birthday Cake No.2</a></h6>
             <p class="mb-3 flex-grow-1">
@@ -175,7 +185,7 @@
       <!-- Cake 3 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3">
+          <img src="../img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3">
           <div class="card-body d-flex flex-column">
             <h6 class="fw-bold"><a href="#">Birthday Cake No.3</a></h6>
             <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
@@ -190,7 +200,7 @@
       <!-- Cake 4 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4">
+          <img src="../img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4">
           <div class="card-body d-flex flex-column">
             <h6 class="fw-bold"><a href="#">Birthday Cake No.4</a></h6>
             <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
@@ -228,7 +238,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="index.html" class="navbar-brand">
+            <a href="../index.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -267,7 +277,7 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="index.html"><i
+                <a class="text-secondary mb-2" href="../index.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                 <a class="text-secondary mb-2" href="about.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
