--- a/pages/birthday-cake-3.html
+++ b/pages/birthday-cake-3.html
@@ -26,44 +26,36 @@
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />
 
-  <!DOCTYPE html>
-  <html lang="en">
+  <style>
+    /* Container bọc ngoài có ảnh nền */
+    .card-wrapper {
+      background: url("../img/bg.jpg") no-repeat center center;
+      background-size: cover;
+      padding: 40px;
+    }
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card with Background</title>
-    <style>
-      /* Container bọc ngoài có ảnh nền */
-      .card-wrapper {
-        background: url("img/bg.jpg") no-repeat center center;
-        background-size: cover;
-        padding: 40px;
-        /* tạo khoảng cách cho card nổi bật */
-      }
+    /* Card vẫn giữ nền trắng */
+    .card {
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
-      /* Card vẫn giữ nền trắng */
-      .card {
-        background-color: #fff;
-        border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      }
+    .card a {
+      text-decoration: none;
+      color: #333;
+    }
 
-      .card a {
-        text-decoration: none;
-        color: #333;
-      }
-
-      .card a:hover {
-        color: #007bff;
-      }
-    </style>
-  </head>
+    .card a:hover {
+      color: #007bff;
+    }
+  </style>
+</head>
 
 <body>
   <!-- Topbar Start -->
@@ -80,7 +72,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="index.html" class="navbar-brand">
+          <a href="../index.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -109,7 +101,7 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="index.html" class="nav-item nav-link active">Home</a>
+          <a href="../index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
           <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
           <a href="team.html" class="nav-item nav-link">Master Chefs</a>
@@ -131,73 +123,103 @@
   </nav>
   <!-- Navbar End -->
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-
-<div class="container mt-5">
-    <div class="row">
-        <!-- Product Images -->
-        <div class="col-md-4 mb-4">
-            <img src="img/bdcake-1.jpg" alt="Product" class="img-fluid rounded mb-3 product-image" id="mainImage">
-        </div>
-
-        <!-- Product Details -->
-        <div class="col-md-6">
-            <h2 class="mb-3">Premium Wireless Headphones</h2>
-            <p class="text-muted mb-4">SKU: WH1000XM4</p>
-            <div class="mb-3">
-                <span class="h4 me-2">$349.99</span>
-                <span class="text-muted"><s>$399.99</s></span>
-            </div>
-            <div class="mb-3">
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-half text-warning"></i>
-                <span class="ms-2">4.5 (120 reviews)</span>
-            </div>
-            <p class="mb-4">Experience premium sound quality and industry-leading noise cancellation with these wireless
-                headphones. Perfect for music lovers and frequent travelers.</p>
-            <div class="mb-4">
-                <h5>Color:</h5>
-                <div class="btn-group" role="group" aria-label="Color selection">
-                    <input type="radio" class="btn-check" name="color" id="black" autocomplete="off" checked>
-                    <label class="btn btn-outline-dark" for="black">Black</label>
-                    <input type="radio" class="btn-check" name="color" id="silver" autocomplete="off">
-                    <label class="btn btn-outline-secondary" for="silver">Silver</label>
-                    <input type="radio" class="btn-check" name="color" id="blue" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="blue">Blue</label>
-                </div>
-            </div>
-            <div class="mb-4">
-                <label for="quantity" class="form-label">Quantity:</label>
-                <input type="number" class="form-control" id="quantity" value="1" min="1" style="width: 80px;">
-            </div>
-            <button class="btn btn-primary btn-lg mb-3 me-2">
-                    <i class="bi bi-cart-plus"></i> Add to Cart
-                </button>
-            
-            <div class="mt-4">
-                <h5>Key Features:</h5>
-                <ul>
-                    <li>Industry-leading noise cancellation</li>
-                    <li>30-hour battery life</li>
-                    <li>Touch sensor controls</li>
-                    <li>Speak-to-chat technology</li>
-                </ul>
-            </div>
-        </div>
+  
+  <!-- Birthday Cakes Section -->
+  <div class="container my-5 position-relative">
+    <!-- Menu 3 gạch -->
+    <div class="dropdown position-absolute" style="top: -20px; right: -60px;">
+      <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="fas fa-bars"></i>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="menuDropdown">
+        <li><a class="dropdown-item" href="birthday-cake-1.html">Birthday Cake</a></li>
+        <li><a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a></li>
+        <li><a class="dropdown-item" href="custom-cake-1.html">Custom Cake</a></li>
+      </ul>
     </div>
-</div>
+    <!-- Grid bánh -->
+    <div class="row g-4 mt-5">
+      <!-- Cake 9 -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 text-center">
+          <img src="../img/bdcake-9.jpg" class="card-img-top" alt="Birthday Cake 9">
+          <div class="card-body d-flex flex-column">
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.9</a></h6>
+            <p class="mb-3 flex-grow-1">
+              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+            </p>
+            <h5 class="fw-semibold">$45.99</h5>
+            <button class="btn btn-primary mt-2">Read More</button>
+            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+          </div>
+        </div>
+      </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    function changeImage(event, src) {
-            document.getElementById('mainImage').src = src;
-            document.querySelectorAll('.thumbnail').forEach(thumb => thumb.classList.remove('active'));
-            event.target.classList.add('active');
-        }
-</script>
+      <!-- Cake 10 -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 text-center">
+          <img src="../img/bdcake-10.jpg" class="card-img-top" alt="Birthday Cake 10">
+          <div class="card-body d-flex flex-column">
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.10</a></h6>
+            <p class="mb-3 flex-grow-1">
+              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+            </p>
+            <h5 class="fw-semibold">$45.99</h5>
+            <button class="btn btn-primary mt-2">Read More</button>
+            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cake 11 -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 text-center">
+          <img src="../img/bdcake-11.jpg" class="card-img-top" alt="Birthday Cake 11">
+          <div class="card-body d-flex flex-column">
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.11</a></h6>
+            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
+              celebrations.</p>
+            <h5 class="fw-semibold">$45.99</h5>
+            <button class="btn btn-primary mt-2">Read More</button>
+            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cake 12 -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 text-center">
+          <img src="../img/bdcake-12.jpg" class="card-img-top" alt="Birthday Cake 12">
+          <div class="card-body d-flex flex-column">
+            <h6 class="fw-bold"><a href="#">Birthday Cake No.12</a></h6>
+            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
+              celebrations.</p>
+            <h5 class="fw-semibold">$45.99</h5>
+            <button class="btn btn-primary mt-2">Read More</button>
+            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Pagination -->
+  <div class="d-flex justify-content-center mt-4">
+    <nav aria-label="Cake list pages">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="birthday-cake-2.html">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="birthday-cake-1.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="birthday-cake-2.html">2</a></li>
+        <li class="page-item active"><a class="page-link" href="birthday-cake-3.html">3</a></li>
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1">Next</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
   <!-- Footer Start -->
   <div class="container-fluid bg-img text-secondary" style="margin-top: 90px">
@@ -206,7 +228,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="index.html" class="navbar-brand">
+            <a href="../index.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -245,7 +267,7 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="index.html"><i
+                <a class="text-secondary mb-2" href="../index.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                 <a class="text-secondary mb-2" href="about.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
