--- a/pages/loggedin.html
+++ b/pages/loggedin.html
@@ -26,10 +26,10 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
             </div>
             <div class="col-lg-4 text-center bg-primary border-inner py-3">
                 <div class="d-inline-flex align-items-center justify-content-center">
-                    <a href="index.html" class="navbar-brand">
+                    <a href="../index.html" class="navbar-brand">
                         <h1 class="m-0 text-uppercase text-white"><i
                                 class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                     </a>
@@ -78,7 +78,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <!-- Các menu đang có -->
       <div class="navbar-nav ms-auto mx-lg-auto py-0">
-        <a href="index.html" class="nav-item nav-link active">Home</a>
+        <a href="../index.html" class="nav-item nav-link active">Home</a>
         <a href="about.html" class="nav-item nav-link">About Us</a>
         <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
         <a href="team.html" class="nav-item nav-link">Master Chefs</a>
@@ -96,14 +96,14 @@
       <div class="navbar-nav ms-3">
         <!-- Shopping cart -->
         <a href="cart.html" class="nav-link me-3">
-          <img src="img/shopping-cart-white.png" alt="Cart"
+          <img src="../img/shopping-cart-white.png" alt="Cart"
             style="width:40px; height:40px; object-fit:cover;">
         </a>
 
         <!-- Avatar -->
         <div class="nav-item dropdown">
           <a href="#" class="nav-link" data-bs-toggle="dropdown">
-            <img src="img/human_white.png" alt="User"
+            <img src="../img/human_white.png" alt="User"
               style="width:40px; height:40px; border-radius:0%; object-fit:cover;">
           </a>
           <div class="dropdown-menu dropdown-menu-end m-0">
@@ -245,7 +245,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/about.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="../img/about.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 pb-5">
@@ -366,7 +366,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-1.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -381,7 +381,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-1.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -396,7 +396,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-1.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -411,7 +411,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-1.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -426,7 +426,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-1.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -441,7 +441,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-1.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -460,7 +460,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-2.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -475,7 +475,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-2.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -490,7 +490,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-2.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -505,7 +505,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-2.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -520,7 +520,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-2.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -535,7 +535,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-2.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -554,7 +554,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-3.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -569,7 +569,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-3.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -584,7 +584,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-3.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -599,7 +599,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-3.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -614,7 +614,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-3.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -629,7 +629,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
+                                        <img class="img-fluid" src="../img/cake-3.jpg" alt=""
                                             style="width: 150px; height: 85px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
@@ -700,7 +700,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team-1.jpg" alt="">
                             <div
                                 class="team-overlay w-100 h-100 position-absolute top-50 start-50 translate-middle d-flex align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-start">
@@ -722,7 +722,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team-2.jpg" alt="">
                             <div
                                 class="team-overlay w-100 h-100 position-absolute top-50 start-50 translate-middle d-flex align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-start">
@@ -744,7 +744,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team-3.jpg" alt="">
                             <div
                                 class="team-overlay w-100 h-100 position-absolute top-50 start-50 translate-middle d-flex align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-start">
@@ -864,7 +864,7 @@
                 <div class="col-lg-4 col-md-6 mb-lg-n5">
                     <div
                         class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-                        <a href="index.html" class="navbar-brand">
+                        <a href="../index.html" class="navbar-brand">
                             <h1 class="m-0 text-uppercase text-white"><i
                                     class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
