--- a/pages/service.html
+++ b/pages/service.html
@@ -24,26 +24,10 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-    
-    <!-- CSS cho nút Close custom -->
-    <style>
-      .btn-close-custom {
-        background-color: #e88f2a;
-        border: none;
-        padding: 8px 16px;
-        color: #fff;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-
-      .btn-close-custom:hover {
-        background-color: #cf7d20;
-      }
-    </style>
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -95,13 +79,13 @@
                 <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
                 <a href="team.html" class="nav-item nav-link">Master Chefs</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="service.html" class="dropdown-item">Our Service</a>
+                        <a href="service.html" class="dropdown-item active">Our Service</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -112,81 +96,50 @@
     <div class="container-fluid bg-dark bg-img p-5 mb-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-uppercase text-white">Contact Us</h1>
+                <h1 class="display-4 text-uppercase text-white">Services</h1>
                 <a href="">Home</a>
                 <i class="far fa-square text-primary px-2"></i>
-                <a href="">Contact</a>
+                <a href="">Services</a>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- Contact Start -->
-    <div class="container-fluid contact position-relative px-5" style="margin-top: 90px;">
+    <!-- Service Start -->
+    <div class="container-fluid service position-relative px-5" style="margin-top: 90px;">
         <div class="container">
-            <div class="row g-5 mb-5">
+            <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
-                        <i class="bi bi-geo-alt fs-1 text-white"></i>
-                        <h6 class="text-uppercase my-2">Our Office</h6>
-                        <span>123 Street, New York, USA</span>
+                        <h4 class="text-uppercase mb-3">Birthday Cake</h4>
+                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
-                        <i class="bi bi-envelope-open fs-1 text-white"></i>
-                        <h6 class="text-uppercase my-2">Email Us</h6>
-                        <span>info@example.com</span>
+                        <h4 class="text-uppercase mb-3">Wedding Cake</h4>
+                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
-                        <i class="bi bi-phone-vibrate fs-1 text-white"></i>
-                        <h6 class="text-uppercase my-2">Call Us</h6>
-                        <span>+012 345 6789</span>
+                        <h4 class="text-uppercase mb-3">Custom Cake</h4>
+                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <form id="contactForm">
-                        <div class="row g-3">
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Your Name" style="height: 55px;">
-                            </div>
-                            <div class="col-sm-6">
-                                <input type="email" class="form-control bg-light border-0 px-4" placeholder="Your Email" style="height: 55px;">
-                            </div>
-                            <div class="col-sm-12">
-                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Subject" style="height: 55px;">
-                            </div>
-                            <div class="col-sm-12">
-                                <textarea class="form-control bg-light border-0 px-4 py-3" rows="4" placeholder="Message"></textarea>
-                            </div>
-                            <div class="col-sm-12">
-                                <button class="btn btn-primary border-inner w-100 py-3" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
+                <div class="col-lg-12 col-md-6 text-center">
+                    <h1 class="text-uppercase text-light mb-4">30% Discount For This Summer</h1>
+                    <a href="" class="btn btn-primary border-inner py-3 px-5">Order Now</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact End -->
+    <!-- Service Start -->
 
-
-    <!-- Modal thông báo -->
-    <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content text-center p-4">
-                <h5 class="modal-title mb-3" id="successModalLabel">Message Sent</h5>
-                <p>Thank you for your response!</p>
-                <button type="button" class="btn-close-custom mt-3" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark bg-img text-secondary" style="margin-top: 235px">
@@ -251,7 +204,9 @@
     <div class="container-fluid text-secondary py-4" style="background: #111111;">
         <div class="container text-center">
             <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved. 
-            Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+			
+			<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+			Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
     <!-- Footer End -->
@@ -271,14 +226,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
-    <!-- JS để mở modal khi gửi form -->
-    <script>
-      document.getElementById("contactForm").addEventListener("submit", function(e) {
-        e.preventDefault(); // chặn reload trang
-        var myModal = new bootstrap.Modal(document.getElementById('successModal'));
-        myModal.show();
-      });
-    </script>
 </body>
+
 </html>
