--- a/pages/signup.html
+++ b/pages/signup.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <section class="vh-100" style="background: url('img/bg.jpg') no-repeat center center/cover">
+  <section class="vh-100" style="background: url('../img/bg.jpg') no-repeat center center/cover">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-lg-12 col-xl-11">
@@ -104,6 +104,7 @@
                       </button>
                     </div>
 
+
                     <!-- Login Link -->
                     <div class="text-center">
                       <p>
@@ -112,7 +113,15 @@
                       </p>
                     </div>
                   </form>
+
+
+                  <!-- Home -->
+                  <div class="text-center">
+                    <a href="../index.html" style="color: #e88f2a">Home</a>
+                  </div>
                 </div>
+
+
 
                 <!-- Image -->
                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
