--- a/pages/wedding-cake-2.html
+++ b/pages/wedding-cake-2.html
@@ -26,15 +26,15 @@
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />
 
   <style>
     /* Container bọc ngoài có ảnh nền */
     .card-wrapper {
-      background: url("img/bg.jpg") no-repeat center center;
+      background: url("../img/bg.jpg") no-repeat center center;
       background-size: cover;
       padding: 40px;
     }
@@ -72,7 +72,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="index.html" class="navbar-brand">
+          <a href="../index.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -101,7 +101,7 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="index.html" class="nav-item nav-link active">Home</a>
+          <a href="../index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
           <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
           <a href="team.html" class="nav-item nav-link">Master Chefs</a>
@@ -126,6 +126,13 @@
   
   <!-- Birthday Cakes Section -->
   <div class="container my-5 position-relative">
+    <div class="position-relative">
+      <!-- Nút Back -->
+      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+        style="top: -40px; left: -360px; z-index: 1000;">
+        ← Back
+      </a>
+    </div>
     <!-- Menu 3 gạch -->
     <div class="dropdown position-absolute" style="top: -20px; right: -60px;">
       <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown"
@@ -140,14 +147,14 @@
     </div>
     <!-- Grid bánh -->
     <div class="row g-4 mt-5">
-      <!-- Cake 9 -->
+      <!-- Cake 5 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-9.jpg" class="card-img-top" alt="Birthday Cake 9">
+          <img src="../img/wdcake-5.jpg" class="card-img-top" alt="Wedding Cake 5">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.9</a></h6>
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.5</a></h6>
             <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+              Delicious custom wedding cake with high-quality ingredients, perfect for celebrations.
             </p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -156,14 +163,14 @@
         </div>
       </div>
 
-      <!-- Cake 10 -->
+      <!-- Cake 6 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-10.jpg" class="card-img-top" alt="Birthday Cake 10">
+          <img src="../img/wdcake-6.jpg" class="card-img-top" alt="Wedding Cake 6">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.10</a></h6>
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.6</a></h6>
             <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+              Delicious custom wedding cake with high-quality ingredients, perfect for celebrations.
             </p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -172,13 +179,13 @@
         </div>
       </div>
 
-      <!-- Cake 11 -->
+      <!-- Cake 7 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-11.jpg" class="card-img-top" alt="Birthday Cake 11">
+          <img src="../img/wdcake-7.jpg" class="card-img-top" alt="Wedding Cake 7">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.11</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.7</a></h6>
+            <p class="mb-3 flex-grow-1">Delicious custom wedding cake with high-quality ingredients, perfect for
               celebrations.</p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -187,13 +194,13 @@
         </div>
       </div>
 
-      <!-- Cake 12 -->
+      <!-- Cake 8 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="img/bdcake-12.jpg" class="card-img-top" alt="Birthday Cake 12">
+          <img src="../img/wdcake-8.jpg" class="card-img-top" alt="Wedding Cake 8">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.12</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.8</a></h6>
+            <p class="mb-3 flex-grow-1">Delicious custom wedding cake with high-quality ingredients, perfect for
               celebrations.</p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -208,14 +215,14 @@
   <div class="d-flex justify-content-center mt-4">
     <nav aria-label="Cake list pages">
       <ul class="pagination">
-        <li class="page-item disabled">
-          <a class="page-link" href="birthday-cake-2.html">Previous</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="birthday-cake-1.html">1</a></li>
-        <li class="page-item"><a class="page-link" href="birthday-cake-2.html">2</a></li>
-        <li class="page-item active"><a class="page-link" href="birthday-cake-3.html">3</a></li>
         <li class="page-item">
-          <a class="page-link" href="#" tabindex="-1">Next</a>
+          <a class="page-link" href="wedding-cake-1.html">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="wedding-cake-1.html">1</a></li>
+        <li class="page-item active"><a class="page-link" href="wedding-cake-2.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="wedding-cake-3.html">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="wedding-cake-3.html">Next</a>
         </li>
       </ul>
     </nav>
@@ -228,7 +235,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="index.html" class="navbar-brand">
+            <a href="../index.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -267,7 +274,7 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="index.html"><i
+                <a class="text-secondary mb-2" href="../index.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                 <a class="text-secondary mb-2" href="about.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
