Add cart page, fix item list pages

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team.html" class="nav-item nav-link">Master Chefs</a>
+                    <a href="pages/index.html" class="nav-item nav-link active">Home</a>
+                    <a href="pages/about.html" class="nav-item nav-link">About Us</a>
+                    <a href="pages/menu.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="pages/team.html" class="nav-item nav-link">Master Chefs</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item">Our Service</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="pages/service.html" class="dropdown-item">Our Service</a>
+                            <a href="pages/testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>
                     <a href="pages/contact.html" class="nav-item nav-link">Contact Us</a>
@@ -647,7 +647,7 @@
                         <h4 class="text-uppercase mb-3">Wedding Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase text-dark" href="pages/wedding-cake-1.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
