--- a/pages/loggedin.html
+++ b/pages/loggedin.html
@@ -110,7 +110,7 @@
             <a href="profile.html" class="dropdown-item">Thông tin</a>
             <a href="orders.html" class="dropdown-item">Đơn hàng</a>
             <div class="dropdown-divider"></div>
-            <a href="logout.html" class="dropdown-item">Đăng xuất</a>
+            <a href="../index.html" class="dropdown-item">Đăng xuất</a>
           </div>
         </div>
       </div>
