--- a/pages/login.html
+++ b/pages/login.html
@@ -71,7 +71,7 @@
 
     <!-- Home -->
     <div class="text-center">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
     </div>
   </form>
 
