--- a/pages/birthday-cake-3.html
+++ b/pages/birthday-cake-3.html
@@ -126,6 +126,13 @@
   
   <!-- Birthday Cakes Section -->
   <div class="container my-5 position-relative">
+    <div class="position-relative">
+      <!-- Nút Back -->
+      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+        style="top: -40px; left: -360px; z-index: 1000;">
+        ← Back
+      </a>
+    </div>
     <!-- Menu 3 gạch -->
     <div class="dropdown position-absolute" style="top: -20px; right: -60px;">
       <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown"
