--- a/pages/wedding-cake-3.html
+++ b/pages/wedding-cake-3.html
@@ -147,14 +147,14 @@
     </div>
     <!-- Grid bánh -->
     <div class="row g-4 mt-5">
-      <!-- Cake 5 -->
+      <!-- Cake 9 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="../img/bdcake-5.jpg" class="card-img-top" alt="Birthday Cake 5">
+          <img src="../img/wdcake-9.jpg" class="card-img-top" alt="Wedding Cake 9">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.5</a></h6>
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.9</a></h6>
             <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+              Delicious custom wedding cake with high-quality ingredients, perfect for celebrations.
             </p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -166,11 +166,11 @@
       <!-- Cake 6 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="../img/bdcake-6.jpg" class="card-img-top" alt="Birthday Cake 6">
+          <img src="../img/wdcake-10.jpg" class="card-img-top" alt="Wedding Cake 10">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.6</a></h6>
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.10</a></h6>
             <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
+              Delicious custom wedding cake with high-quality ingredients, perfect for celebrations.
             </p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -182,10 +182,10 @@
       <!-- Cake 7 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="../img/bdcake-7.jpg" class="card-img-top" alt="Birthday Cake 7">
+          <img src="../img/wdcake-11.jpg" class="card-img-top" alt="Wedding Cake 11">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.7</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.11</a></h6>
+            <p class="mb-3 flex-grow-1">Delicious custom wedding cake with high-quality ingredients, perfect for
               celebrations.</p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -197,10 +197,10 @@
       <!-- Cake 8 -->
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 text-center">
-          <img src="../img/bdcake-8.jpg" class="card-img-top" alt="Birthday Cake 8">
+          <img src="../img/wdcake-12.jpg" class="card-img-top" alt="Wedding Cake 12">
           <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.8</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
+            <h6 class="fw-bold"><a href="#">Wedding Cake No.12</a></h6>
+            <p class="mb-3 flex-grow-1">Delicious custom wedding cake with high-quality ingredients, perfect for
               celebrations.</p>
             <h5 class="fw-semibold">$45.99</h5>
             <button class="btn btn-primary mt-2">Read More</button>
@@ -216,13 +216,13 @@
     <nav aria-label="Cake list pages">
       <ul class="pagination">
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-1.html">Previous</a>
+          <a class="page-link" href="wedding-cake-2.html">Previous</a>
         </li>
-        <li class="page-item"><a class="page-link" href="birthday-cake-1.html">1</a></li>
-        <li class="page-item active"><a class="page-link" href="birthday-cake-2.html">2</a></li>
-        <li class="page-item"><a class="page-link" href="birthday-cake-3.html">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="birthday-cake-3.html">Next</a>
+        <li class="page-item"><a class="page-link" href="wedding-cake-1.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="wedding-cake-2.html">2</a></li>
+        <li class="page-item active"><a class="page-link" href="wedding-cake-3.html">3</a></li>
+        <li class="page-item disabled">
+          <a class="page-link" href="#">Next</a>
         </li>
       </ul>
     </nav>
