--- a/pages/loggedin.html
+++ b/pages/loggedin.html
@@ -659,7 +659,7 @@
                         <h4 class="text-uppercase mb-3">Birthday Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="birthday-cake-1.html">Read More <i
+                        <a class="text-uppercase text-dark" href="birthday-cake-1-logged.html">Read More <i
                                 class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -668,7 +668,7 @@
                         <h4 class="text-uppercase mb-3">Wedding Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase text-dark" href="wedding-cake-1.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
