--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register Page</title>
+  <title>Signup Page</title>
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <!-- MDB UI Kit -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet" />
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <style>
     /* Checkbox */
@@ -87,23 +89,14 @@
                       </div>
                     </div>
 
-                    <!-- Terms Checkbox -->
-                    <div class="form-check d-flex justify-content-center mb-5">
-                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" required />
-                      <label class="form-check-label" for="form2Example3c">
-                        I agree all statements in
-                        <a href="#!" style="color: #e88f2a">Terms of service</a>
-                      </label>
-                    </div>
+                    
 
                     <!-- Register Button -->
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-primary btn-lg"
-                        onclick="window.location.href='loggedin.html'">
+                      <button type="button" class="btn btn-primary btn-lg" onclick="registerSuccess()">
                         Register
                       </button>
                     </div>
-
 
                     <!-- Login Link -->
                     <div class="text-center">
@@ -114,14 +107,11 @@
                     </div>
                   </form>
 
-
                   <!-- Home -->
                   <div class="text-center">
                     <a href="../index.html" style="color: #e88f2a">Home</a>
                   </div>
                 </div>
-
-
 
                 <!-- Image -->
                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
@@ -139,6 +129,20 @@
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+
+  <script>
+    function registerSuccess() {
+      Swal.fire({
+        icon: 'success',
+        title: 'Sign up successfully!',
+        text: 'Redirecting to your account...',
+        showConfirmButton: false,
+        timer: 2000
+      }).then(() => {
+        window.location.href = "loggedin.html";
+      });
+    }
+  </script>
 </body>
 
 </html>
