--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,145 +4,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Signup Page</title>
-  <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
-  <!-- MDB UI Kit -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet" />
-  <!-- SweetAlert2 -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <title>Sign Up Page</title>
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
+
+  <link rel="stylesheet" href="../css/custom.css" />
 
   <style>
-    /* Checkbox */
+    /* Ghi đè màu checkbox khi được chọn */
     .form-check-input:checked {
       background-color: #e88f2a !important;
       border-color: #e88f2a !important;
     }
 
+    /* Nếu muốn cả hiệu ứng focus cũng đổi */
     .form-check-input:focus {
       box-shadow: 0 0 0 0.25rem rgba(232, 143, 42, 0.25) !important;
       border-color: #e88f2a !important;
-    }
-
-    /* Nút Register */
-    .btn-primary {
-      background-color: #e88f2a !important;
-      border: none;
-    }
-
-    .btn-primary:hover {
-      background-color: #cf7c23 !important;
     }
   </style>
 </head>
 
 <body>
-  <section class="vh-100" style="background: url('../img/bg.jpg') no-repeat center center/cover">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 25px">
-            <div class="card-body p-md-5">
-              <div class="row justify-content-center">
-                <!-- Form -->
-                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
-                    Sign up
-                  </p>
-
-                  <form class="mx-1 mx-md-4">
-                    <!-- Name -->
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                      <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example1c" class="form-control" required />
-                        <label class="form-label" for="form3Example1c">Your Name</label>
-                      </div>
-                    </div>
-
-                    <!-- Email -->
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                      <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="email" id="form3Example3c" class="form-control" required />
-                        <label class="form-label" for="form3Example3c">Your Email</label>
-                      </div>
-                    </div>
-
-                    <!-- Password -->
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                      <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4c" class="form-control" required />
-                        <label class="form-label" for="form3Example4c">Password</label>
-                      </div>
-                    </div>
-
-                    <!-- Repeat Password -->
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                      <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4cd" class="form-control" required />
-                        <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                      </div>
-                    </div>
-
-                    
-
-                    <!-- Register Button -->
-                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-primary btn-lg" onclick="registerSuccess()">
-                        Register
-                      </button>
-                    </div>
-
-                    <!-- Login Link -->
-                    <div class="text-center">
-                      <p>
-                        Already have an account?
-                        <a href="login.html" style="color: #e88f2a">Login</a>
-                      </p>
-                    </div>
-                  </form>
-
-                  <!-- Home -->
-                  <div class="text-center">
-                    <a href="../index.html" style="color: #e88f2a">Home</a>
-                  </div>
-                </div>
-
-                <!-- Image -->
-                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                    class="img-fluid" alt="Sample image" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+  <form>
+    <div class="mb-4">
+      <label class="form-label" for="formName">Your Name</label>
+      <input type="text" id="formName" class="form-control" required />
     </div>
-  </section>
 
-  <!-- JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+    <div class="mb-4">
+      <label class="form-label" for="formEmail">Your Email</label>
+      <input type="email" id="formEmail" class="form-control" required />
+    </div>
 
-  <script>
-    function registerSuccess() {
-      Swal.fire({
-        icon: 'success',
-        title: 'Sign up successfully!',
-        text: 'Redirecting to your account...',
-        showConfirmButton: false,
-        timer: 2000
-      }).then(() => {
-        window.location.href = "loggedin.html";
-      });
-    }
-  </script>
+    <div class="mb-4">
+      <label class="form-label" for="formPassword">Your Password</label>
+      <input type="password" id="formPassword" class="form-control" required />
+    </div>
+
+    <div class="mb-4">
+      <label class="form-label" for="formRepeatPassword">Repeat Password</label>
+      <input type="password" id="formRepeatPassword" class="form-control" required />
+    </div>
+
+    <div class="mb-4">
+      <label class="form-label" for="formPhoneNumber">Phone Number</label>
+      <input type="tel" id="formPhoneNumber" class="form-control" />
+    </div>
+
+    <br><br><br>
+
+    <button type="submit" class="btn btn-primary btn-block mb-4" onclick="window.location.href='loggedin.html'">
+      Sign Up
+    </button>
+
+    <div class="text-center">
+      <p>Already a member? <a href="login.html">Log in</a></p>
+    </div>
+
+    <div class="text-center">
+      <a href="index.html">Home</a>
+    </div>
+  </form>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.js"></script>
 </body>
 
 </html>
