--- a/pages/team-logged.html
+++ b/pages/team-logged.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col-lg-4 text-center bg-primary border-inner py-3">
                 <div class="d-inline-flex align-items-center justify-content-center">
-                    <a href="index.html" class="navbar-brand">
+                    <a href="loggedin.html" class="navbar-brand">
                         <h1 class="m-0 text-uppercase text-white"><i
                                 class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                     </a>
@@ -76,10 +76,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="../index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team.html" class="nav-item nav-link">Master Chefs</a>
+                    <a href="loggedin.html" class="nav-item nav-link active">Home</a>
+                    <a href="about-logged.html" class="nav-item nav-link">About Us</a>
+                    <a href="menu-logged.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
@@ -87,14 +87,32 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
-                <!-- Login/Signup bên phải -->
-                <div class="navbar-nav ms-auto">
-                    <a href="login.html" class="nav-item nav-link">Login</a>
-                    <a href="signup.html" class="nav-item nav-link">Signup</a>
+                <!-- Shopping cart + Avatar menu bên phải -->
+                <div class="navbar-nav ms-3">
+                    <!-- Shopping cart -->
+                    <a href="cart.html" class="nav-link me-3">
+                        <img src="../img/shopping-cart-white.png" alt="Cart"
+                            style="width:40px; height:40px; object-fit:cover;">
+                    </a>
+
+                    <!-- Avatar -->
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                            <img src="../img/human_white.png" alt="User"
+                                style="width:40px; height:40px; border-radius:0%; object-fit:cover;">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end m-0">
+                            <a href="user-profile.html" class="dropdown-item">Thông tin</a>
+                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                            <div class="dropdown-divider"></div>
+                            <a href="../index.html" class="dropdown-item">Đăng xuất</a>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </nav>
@@ -106,9 +124,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-uppercase text-white">Master Chefs</h1>
-                <a href="../index.html">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="">Master Chefs</a>
+                <a href="loggedin.html">Home</a>
             </div>
         </div>
     </div>
@@ -220,11 +236,11 @@
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="../index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                                <a class="text-secondary mb-2" href="loggedin.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                <a class="text-secondary mb-2" href="about-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
                                 <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
                                 <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-secondary" href="contact-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
