Thêm popup khi đăng ký thành công và tự chuyển sang trang loggedin. Bỏ đi menu Pages

--- a/pages/about-logged.html
+++ b/pages/about-logged.html
@@ -76,22 +76,16 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="loggedin.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
+                    <a href="loggedin.html" class="nav-item nav-link">Home</a>
+                    <a href="about.html" class="nav-item nav-link active">About Us</a>
                     <a href="menu-logged.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item">Our Service</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        </div>
-                    </div>
+                    
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
                 <!-- Shopping cart + Avatar menu bên phải -->
-                <div class="navbar-nav ms-3">
+                <div class="navbar-nav ms-auto">
                     <!-- Shopping cart -->
                     <a href="cart.html" class="nav-link me-3">
                         <img src="../img/shopping-cart-white.png" alt="Cart"
