--- a/pages/menu.html
+++ b/pages/menu.html
@@ -78,17 +78,11 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="../index.html" class="nav-item nav-link active">Home</a>
+                    <a href="../index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="menu.html" class="nav-item nav-link active">Menu & Pricing</a>
                     <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item">Our Service</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        </div>
-                    </div>
+                    
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
