--- a/pages/signup.html
+++ b/pages/signup.html
@@ -6,20 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign Up Page</title>
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
-
   <link rel="stylesheet" href="../css/custom.css" />
 
   <style>
-    /* Ghi đè màu checkbox khi được chọn */
     .form-check-input:checked {
       background-color: #e88f2a !important;
       border-color: #e88f2a !important;
     }
 
-    /* Nếu muốn cả hiệu ứng focus cũng đổi */
     .form-check-input:focus {
       box-shadow: 0 0 0 0.25rem rgba(232, 143, 42, 0.25) !important;
       border-color: #e88f2a !important;
@@ -28,7 +24,7 @@
 </head>
 
 <body>
-  <form>
+  <form id="signupForm">
     <div class="mb-4">
       <label class="form-label" for="formName">Your Name</label>
       <input type="text" id="formName" class="form-control" required />
@@ -54,23 +50,55 @@
       <input type="tel" id="formPhoneNumber" class="form-control" />
     </div>
 
-    <br><br><br>
+    <button type="submit" class="btn btn-primary d-block w-100 mb-4">
+  Sign Up
+</button>
 
-    <button type="submit" class="btn btn-primary btn-block mb-4" onclick="window.location.href='loggedin.html'">
-      Sign Up
-    </button>
 
     <div class="text-center">
       <p>Already a member? <a href="login.html">Log in</a></p>
     </div>
 
     <div class="text-center">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
     </div>
   </form>
 
+  <!-- Bootstrap Modal -->
+  <div class="modal fade" id="signupSuccessModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content text-center p-4">
+        <div class="modal-body">
+          <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem;"></i>
+          <h3 class="mt-3">Đăng ký thành công!</h3>
+          <p>Bạn sẽ được chuyển đến trang đăng nhập...</p>
+          <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const signupForm = document.getElementById('signupForm');
+      const modalEl = document.getElementById('signupSuccessModal');
+      const modalOkBtn = document.getElementById('modalOkBtn');
+
+      const successModal = new bootstrap.Modal(modalEl);
+
+      signupForm.addEventListener('submit', (e) => {
+        e.preventDefault(); // Ngăn form reset
+        successModal.show();
+      });
+
+      modalOkBtn.addEventListener('click', () => {
+        window.location.href = "loggedin.html"; // Chuyển trang
+      });
+    });
+  </script>
 </body>
 
 </html>
